--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  background: #fff;
+  background: #f5f5f5;
   z-index: 1000;
   box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.1);
   transition: transform 0.4s ease, opacity 0.4s ease;
@@ -67,7 +67,7 @@ body {
     justify-content: center;
     place-items: center center;
     gap: 40px;
-    background: #fff;
+    /* background: #fff; */
     position: relative;
 }
 
@@ -81,9 +81,11 @@ body {
     display: flex;
     justify-content: center;
     place-items: center center;
-    background: #ccc;
+    background: #ffffff;
     width: 32px;
     height: 32px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
 }
 
 .gnb li a, .lnb .category li a {
