--- a/css/header.css
+++ b/css/header.css
@@ -1,23 +1,24 @@
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: #f5f5f5;
-  z-index: 1000;
-  box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.1);
-  transition: transform 0.4s ease, opacity 0.4s ease;
+header.header-web {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: #f5f5f5;
+    z-index: 1000;
+    box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.4s ease, opacity 0.4s ease;
 }
 
 /* 숨김 상태 */
-header.hide {
-  transform: translateY(-100%);
-  opacity: 0;
+header.header-web.hide {
+    transform: translateY(-100%);
+    opacity: 0;
 }
 
 /* 헤더 아래 컨텐츠가 가려지지 않게 */
 body {
-  padding-top: 80px;
+    padding-top: 80px;
 }
 
 
@@ -185,4 +186,248 @@ body {
     color: #fff;
 }
 
+header.header-mob {
+    display: none;
+}
+
+.drawer {
+    display: none;
+}
+
 /* / header */
+
+@media (max-width: 992px) {
+    header.header-web {
+        display: none;
+    }
+
+    header.header-mob {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background: #f5f5f5;
+        z-index: 1000;
+        box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.1);
+        transition: transform 0.4s ease, opacity 0.4s ease;
+    }
+
+    header.header-mob.hide {
+    transform: translateY(-100%);
+    opacity: 0;
+}
+
+    header.header-mob .header-mob-inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 12px 16px;
+    }
+
+    header.header-mob .header-mob-inner .header-mob-inner-left > h1.logo > a {
+        display: block;
+        width: 45px;
+        height: 45px;
+    }
+
+    header.header-mob .header-mob-inner .header-mob-inner-left > h1.logo > a > img {
+        display: block;
+        width: 100%;
+    }
+
+    header.header-mob .header-mob-inner .header-mob-inner-right {
+        display: flex;
+        justify-content: space-between;
+        place-items: center center;
+    }
+
+    header.header-mob .header-mob-inner .header-mob-inner-right > button {
+        width: 60px;
+        height: 60px;
+    }
+
+    header.header-mob .header-mob-inner .header-mob-inner-right > button > img {
+        width: 25px;
+    }
+
+    .icon-btn {
+        background: none;
+        border: none;
+        padding: 8px;
+    }
+
+    .lnb-container {
+        display: none;
+    }
+
+    .en {
+        color: #fff;
+    }
+
+    .drawer.open {
+        right: 0;
+    }
+
+    .drawer-top {
+        padding: 12px 16px;
+        border-bottom: 1px solid #202020;
+    }
+
+    .search-form {
+        display: flex;
+        /* background: #f5f5f5; */
+        border-radius: 8px;
+        padding: 8px;
+        gap: 8px;
+    }
+
+    .search-form input {
+        flex: 1;
+        border: none;
+        background: #fff;
+        font-size: 14px;
+        padding: 18px 0;
+        border-radius: 3px;
+    }
+
+    .search-form button {
+        background: #5d5d5d;
+        border: none;
+        color: #fff;
+        font-size: 18px;
+        cursor: pointer;
+    }
+
+    /* 내부 스크롤 안보이게 */
+    .drawer-body {
+        overflow-y: auto;
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+    }
+
+    .drawer-body::-webkit-scrollbar {
+    display: none;
+    /* Chrome, Safari, Edge (Chromium) */
+    }
+
+    .drawer-menu > li:first-child {
+        border-bottom: 1px solid #3c3c3c;
+        display: flex;
+        justify-content: center;
+        place-items: center center;
+        flex-direction: column;
+        /* width: 21px; */
+    }
+
+    .drawer-menu > li:first-child .img {
+        width: 21px;
+    }
+
+    .drawer-menu > li:first-child .img img {
+        width: 100%;
+
+    }
+
+    .menu-toggle {
+        width: 100%;
+        background: none;
+        text-align: left;
+        font-size: 18px;
+        font-weight: 400;
+        padding: 24px;
+        border: none;
+        
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .menu-toggle > span.mt-img img {
+        display: inline-block;
+        transition: transform 0.3s ease;
+    }
+
+    .menu-toggle > span.mt-img.active img {
+        transform: rotate(180deg);
+    }
+
+    /* .menu-toggle.active .img {
+        transform: rotate(180deg);
+    } */
+
+    .drawer-menu > li:nth-child(1) ~ li {
+    background: #151515;
+    }
+
+    .submenu {
+    display: none;
+    }
+
+    .submenu > li {
+        padding: 24px;
+        background: #1e1e1e;
+        border: 1px solid #292929;
+    }
+
+    .submenu > li > a {
+        display: block;
+        color: #fff;
+    }
+
+    .submenu.open { 
+        display: block;
+        width: 100%;
+    }
+
+    .close-btn {
+        position: absolute;
+        top: 28px;
+        left: -73px;
+        transition: transform 0.3s ease;
+        cursor: pointer;
+    }
+
+    .close-btn:hover {
+        transform: rotate(90deg);
+    }
+
+    .drawer-dim {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: rgba(0,0,0,0.4);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease;
+        z-index: 1500;
+    }
+
+    /* 드로어가 열렸을 때 Dim 보이기 */
+.drawer.open ~ .drawer-dim,
+.drawer-dim.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* 드로어 z-index는 dim 위 */
+.drawer {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 80%;
+  height: 100%;
+  background: #2d2926;
+  box-shadow: -4px 0 12px rgba(0, 0, 0, 0.2);
+  transition: right 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  z-index: 2000;
+}
+
+.drawer.open {
+  right: 0;
+}
+
+}
